# Gliner-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs
src/: config.toml  decoder.rs  gliner.rs  lib.rs  main.rs  model.rs  onnxwrapper.rs  processor.rs  types.rs
